// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.875em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 0em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      At sit quibusdam nobis quas eveniet qui architecto corrupti debitis. Consectetur placeat pariatur molestiae libero consequuntur nisi voluptatum voluptatem. Quidem necessitatibus pariatur. Qui quo et. A et officia consequatur velit. Molestiae voluptatem suscipit vero doloribus quibusdam vel laborum asperiores nulla.
 
Ipsum fugit architecto velit quis rerum quia a harum. Esse ut doloribus quo non rerum. Consectetur qui odit praesentium. Natus iusto dolor. Corrupti sunt quam.
 
Aut voluptates quidem voluptatem cum. Officia amet ea nobis delectus ex sed aut quas. Ad amet eum. Et qui quae enim qui alias vitae tempora suscipit ratione.
 
Nihil eveniet magni officiis. Cumque voluptatem rem quia dolorem voluptatibus dolores et commodi. Ad veniam molestiae voluptatibus. Dolor quos consequatur aliquam aut rerum.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.875em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      In ullam velit porro qui consectetur. Sed dolor quo. Maxime est deserunt et et nisi fuga consequatur. Aut voluptas omnis et nostrum aut voluptatibus praesentium. Voluptas cumque aliquam accusamus deserunt aut.
 
Eum aut consequuntur corrupti. Natus beatae alias corporis. Quod dolores et nostrum tempore voluptatibus aut. Cum earum quas inventore incidunt animi quia quasi amet ex.
 
Voluptatibus beatae repudiandae et ut vel dolor esse. Dolorum illum facilis atque ea officia necessitatibus. Voluptatem aspernatur veritatis sed qui consequatur ad id sunt. Magnam reprehenderit sit reprehenderit hic temporibus tenetur facilis odit qui. Est ut ea architecto dolores ipsam qui distinctio. Dicta eius similique molestiae sint.
 
Animi quam maxime quas ut. Cumque qui non impedit eos accusamus dolorem. Voluptatem itaque quasi aut reiciendis commodi ut expedita. Qui sunt assumenda non aut quas laboriosam odit. Iure officia sed corrupti laboriosam voluptatem iste sit sed harum.
    </p>
  </div>
</div>
`;
